# rust_ylong_http

./: .gitignore  Cargo.toml  README.md  README_zh.md  bundle.json
docs/: user_guide.md
docs/benchmarks/: analyze_runtime_frontier_trace.py  run_https_proxy_bench.py  test_run_https_proxy_bench.py  test_runtime_frontier_trace.py
docs/benchmarks/results/: https_proxy_bench_comparison.csv  https_proxy_bench_results.csv  https_proxy_bench_summary.csv
docs/benchmarks/results/a2-no-steal-sleep-candidate/: https_proxy_bench_comparison.csv  https_proxy_bench_env.json  https_proxy_bench_raw.txt  https_proxy_bench_results.csv  https_proxy_bench_summary.csv
docs/benchmarks/results/a2-no-steal-sleep-nonphase/: https_proxy_bench_comparison.csv  https_proxy_bench_env.json  https_proxy_bench_raw.txt  https_proxy_bench_results.csv  https_proxy_bench_summary.csv
docs/benchmarks/results/a2-no-yield-parker-candidate/: https_proxy_bench_comparison.csv  https_proxy_bench_env.json  https_proxy_bench_raw.txt  https_proxy_bench_results.csv  https_proxy_bench_summary.csv
docs/benchmarks/results/a2-no-yield-parker-nonphase/: https_proxy_bench_comparison.csv  https_proxy_bench_env.json  https_proxy_bench_raw.txt  https_proxy_bench_results.csv  https_proxy_bench_summary.csv
docs/benchmarks/results/a2-optimistic-readiness-candidate/: https_proxy_bench_comparison.csv  https_proxy_bench_env.json  https_proxy_bench_raw.txt  https_proxy_bench_results.csv  https_proxy_bench_summary.csv
docs/benchmarks/results/a2-optimistic-readiness-nonphase/: https_proxy_bench_comparison.csv  https_proxy_bench_env.json  https_proxy_bench_raw.txt  https_proxy_bench_results.csv  https_proxy_bench_summary.csv
docs/benchmarks/results/async-single-client-concurrency-candidate/: https_proxy_bench_comparison.csv  https_proxy_bench_env.json  https_proxy_bench_raw.txt  (+2 more)
ylong_http/: BUILD.gn  Cargo.toml
ylong_http/examples/: mimebody_multi.rs  mimebody_multi_then_async_data.rs
ylong_http/src/: error.rs  headers.rs  lib.rs  pseudo.rs  version.rs
ylong_http/src/body/: chunk.rs  empty.rs  mod.rs  text.rs
ylong_http/src/body/mime/: mime_test_macro.rs  mimetype.rs  mod.rs  simple.rs
ylong_http/src/h1/: error.rs  mod.rs
ylong_http/src/h1/request/: encoder.rs  mod.rs
ylong_http/src/h1/response/: decoder.rs  mod.rs
ylong_http/src/h2/: decoder.rs  encoder.rs  error.rs  frame.rs  mod.rs  parts.rs
ylong_http/src/h2/hpack/: decoder.rs  encoder.rs  integer.rs  mod.rs  table.rs
ylong_http/src/h3/: decoder.rs  encoder.rs  error.rs  frame.rs  mod.rs  octets.rs  parts.rs  stream.rs
ylong_http/src/h3/qpack/: decoder.rs  encoder.rs  error.rs  integer.rs  mod.rs  table.rs
ylong_http/src/huffman/: consts.rs  mod.rs
ylong_http/src/request/: method.rs  mod.rs
ylong_http/src/request/uri/: mod.rs  percent_encoding.rs
ylong_http/src/response/: mod.rs  status.rs
ylong_http/src/util/: header_bytes.rs  mod.rs  test_util.rs
ylong_http/tests/: sdv_http_body.rs  sdv_http_error.rs  sdv_http_headers.rs  sdv_http_version.rs
ylong_http_client/: BUILD.gn  Cargo.toml  build.rs
ylong_http_client/examples/: async_certs_adapter.rs  async_http.rs  async_http_dns.rs  async_http_doh.rs  async_http_multi.rs  async_https_outside.rs  async_proxy_http.rs  async_redirect_http.rs  sync_http.rs  sync_https_outside.rs  sync_proxy_http.rs  sync_redirect_http.rs
ylong_http_client/src/: error.rs  lib.rs
ylong_http_client/src/async_impl/: client.rs  http_body.rs  mix.rs  mod.rs  pool.rs  request.rs  response.rs  timeout.rs
ylong_http_client/src/async_impl/conn/: http1.rs  http2.rs  http3.rs  mod.rs
ylong_http_client/src/async_impl/connector/: mod.rs  stream.rs
ylong_http_client/src/async_impl/dns/: default.rs  doh.rs  happy_eyeballs.rs  mod.rs  resolver.rs
ylong_http_client/src/async_impl/downloader/: builder.rs  mod.rs  operator.rs
ylong_http_client/src/async_impl/quic/: mod.rs
ylong_http_client/src/async_impl/ssl_stream/: c_ssl_stream.rs  mod.rs  wrapper.rs
ylong_http_client/src/async_impl/uploader/: builder.rs  mod.rs  operator.rs
ylong_http_client/src/sync_impl/: client.rs  connector.rs  http_body.rs  mod.rs  pool.rs  reader.rs  ssl_stream.rs
ylong_http_client/src/sync_impl/conn/: http1.rs  mod.rs
ylong_http_client/src/util/: alt_svc.rs  base64.rs  data_ref.rs  dispatcher.rs  information.rs  mod.rs  normalizer.rs  pool.rs  proxy.rs  redirect.rs  request.rs  test_utils.rs
ylong_http_client/src/util/c_openssl/: adapter.rs  bio.rs  error.rs  foreign.rs  mod.rs  stack.rs  x509.rs
ylong_http_client/src/util/c_openssl/ffi/: ssl.rs
ylong_http_client/src/util/c_openssl/ssl/: ctx.rs
ylong_http_client/src/util/config/: client.rs  connector.rs  fchown.rs  http.rs  mod.rs  settings.rs
ylong_http_client/src/util/config/tls/alpn/: mod.rs
ylong_http_client/src/util/config/tls/verifier/: mod.rs  openssl.rs
ylong_http_client/src/util/h2/: input.rs  manager.rs  mod.rs  output.rs  streams.rs
ylong_http_client/src/util/h3/: io_manager.rs  mod.rs  stream_manager.rs  streams.rs
ylong_http_client/src/util/interceptor/: mod.rs
ylong_http_client/src/util/monitor/: mod.rs  time_group.rs
ylong_http_client/src/util/progress/: mod.rs  rate_limit.rs
ylong_http_client/tests/: sdv_async_certs_adapter.rs  sdv_async_client_build.rs  sdv_async_custom_dns_resolver.rs  sdv_async_dns_resolver.rs  sdv_async_http.rs  sdv_async_http10.rs  sdv_async_http2.rs  sdv_async_http_body_io.rs  sdv_async_http_client_error.rs  sdv_async_http_on_tcp.rs  sdv_async_http_proxy.rs  sdv_async_https_c_ssl.rs  sdv_async_https_pinning.rs  sdv_async_https_proxy_tls.rs  sdv_async_interceptor.rs  sdv_async_time_group.rs  sdv_https_proxy_no_tls.rs  sdv_sync_http.rs  sdv_sync_http_on_tcp.rs  sdv_sync_https_c_ssl.rs  sdv_sync_https_proxy_tls.rs
ylong_http_client/tests/common/: async_utils.rs  mod.rs  sync_utils.rs
ylong_http_client/tests/file/: cert.pem  invalid_cert.pem  invalid_key.pem
ylong_http_client/tests/file/cert_chain/: chain.crt.pem  rootCA.crt.pem  server.key.pem
ylong_http_client/tests/tcp_server/: async_utils.rs  mod.rs  sync_utils.rs
(+693 files in other folders)
