# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

ohos_rust_shared_library("ylong_http_client_inner") {
  part_name = "ylong_http"
  subsystem_name = "commonlibrary"

  crate_name = "ylong_http_client_inner"
  edition = "2021"

  features = [
    "async",
    "c_openssl_3_0",
    "http1_1",
    "http2",
    "ylong_base",
    "__c_openssl",
    "__tls",
  ]

  sources = [ "src/lib.rs" ]
  deps = [ "../ylong_http:ylong_http" ]
  external_deps = [
    "openssl:libcrypto_shared",
    "openssl:libssl_shared",
    "rust_libc:lib",
    "ylong_runtime:ylong_runtime",
  ]
}

ohos_rust_unittest("rust_ylong_http_client_test_ut") {
  module_out_path = "ylong_http/ylong_http"

  rustflags = [
    "--cfg=feature=\"async\"",
    "--cfg=feature=\"http1_1\"",
    "--cfg=feature=\"http2\"",
    "--cfg=feature=\"c_openssl_3_0\"",
    "--cfg=feature=\"__tls\"",
    "--cfg=feature=\"__c_openssl\"",
    "--cfg=feature=\"ylong_base\"",
  ]

  sources = [ "src/lib.rs" ]
  deps = [
    "../ylong_http:ylong_http",
  ]
  external_deps = [
    "openssl:libcrypto_shared",
    "openssl:libssl_shared",
    "rust_libc:lib",
    "ylong_runtime:ylong_runtime",
  ]
}

group("unittest") {
  testonly = true
  deps = []
  if (!use_clang_coverage) {
    deps += [
      ":rust_ylong_http_client_test_ut",
      "../ylong_http:rust_ylong_http_test_ut",
    ]
  }
}
